카카오페이 결제

--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -40,6 +40,7 @@
                             <li><a href="/member/login">로그인</a></li>
                             <li><a href="/member/save">회원가입</a></li>
                             <li><a href="/question/list">고객센터</a></li>
+                            <li><a href="/order">주문하기</a></li>
                         </div>
                     </div>
                 </ul>
