--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script type="text/javascript"
+            src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <!-- iamport.payment.js == 아임포트 결제모듈 연동 역할 -->
+    <script type="text/javascript"
+            src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/order.css}">
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <style>
         .box {
             width: 50px;
@@ -25,7 +30,7 @@
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <form action="/order/save" method="post">
-        < <input type="hidden" name="userId" th:value="${session.member.userId}">
+        <input type="hidden" name="userId" th:value="${session.member.userId}">
         <input type="hidden" name="memberId" th:value="${session.member.id}">
         <input type="hidden" name="itemId" th:value="${item.id}">
         <table class="table">
@@ -39,7 +44,7 @@
             </tr>
             <tr>
                 <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
-                <td><input type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
+                <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
                 <td><input type="text" name="itemPrice" th:value="${item.itemPrice}" class="form-control" readonly></td>
                 <td>
                     <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
@@ -71,12 +76,12 @@
                 <section>
                     <div>
                         <input type="text" th:value="${session.member.memberName}" readonly style="display: block"
-                               name="memberName">
+                               name="memberName" id="memberName">
                     </div>
 
                     <div>
                         <input type="text" th:value="${session.member.memberMobile}" readonly style="display: block"
-                               name="memberMobile">
+                               name="memberMobile" id="memberMobile">
                     </div>
                 </section>
 
@@ -95,8 +100,8 @@
                 <section>
                     <div>
                         <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
-                               name="memberEmail">
-                        <input type="submit" class="btn btn-success" value="결제하기">
+                               name="memberEmail" id="memberEmail">
+                        <button id="check_module" type="button" onclick="requestPay()">테스트 결제</button>
                     </div>
                 </section>
             </article>
@@ -110,6 +115,47 @@
 
 </body>
 <script th:inline="javascript">
+
+    function requestPay() {
+        const itemName = document.getElementById("itemName").value;
+        let totalPrice =document.getElementById("totalPrice").value;
+        const memberEmail = document.getElementById("memberEmail").value;
+        const memberName = document.getElementById("memberName").value;
+        const memberMobile = document.getElementById("memberMobile").value;
+        const memberAddress = document.getElementById("sample6_address").value;
+        const detailAddress = document.getElementById("sample6_detailAddress").value;
+        const extraAddress = document.getElementById("sample6_extraAddress").value;
+        const postcode = document.getElementById("sample6_postcode").value;
+        IMP.init('imp05030142'); //iamport 대신 자신의 "가맹점 식별코드"를 사용
+        IMP.request_pay({
+            pg: "kakaopay",
+            pay_method: "card",
+            merchant_uid : 'merchant_'+new Date().getTime(),
+            name : itemName,
+            amount : totalPrice,
+            buyer_email : memberEmail,
+            buyer_name : memberName,
+            buyer_tel : memberMobile,
+            buyer_addr : memberAddress + detailAddress+ extraAddress,
+            buyer_postcode : postcode,
+        }, function (rsp) { // callback
+            if (rsp.success) {
+                console.log(rsp);
+                var msg = '결제가 완료되었습니다.\n';
+                msg += '고유ID : ' + rsp.imp_uid+"\n";
+                msg += '상점 거래ID : ' + rsp.merchant_uid+"\n";
+                msg += '결제 금액 : ' + rsp.paid_amount+'원\n';
+                msg += '카드 승인번호 : ' + rsp.apply_num;
+            } else {
+                console.log(rsp);
+                var msg = '결제에 실패하였습니다.\n';
+                msg += '에러내용 : ' + rsp.error_msg;
+            }
+            alert(msg);
+        });
+    }
+
+
     const myInform = () => {
         const memberAddress = document.querySelector('input[name=memberAddress]');
         const detailAddress = document.querySelector('input[name=detailAddress]');
