--- a/src/main/resources/templates/commonPages/modal.html
+++ b/src/main/resources/templates/commonPages/modal.html
@@ -3,7 +3,6 @@
 <th:block th:fragment="modal">
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -42,11 +41,19 @@
       </div>
     </div>
   </div>
-  <script>
+  <script th:inline="javascript">
     $('#commentSave').click(function(e){
       e.preventDefault();
       $('#modalComment').modal("show");
     });
+
+    //모달창
+    window.onload = function () {
+      document.getElementById('btn-close').onclick = function () {
+        document.getElementById('modalComment').style.display = "none"
+      };
+    };
+
   </script>
 </th:block>
 </html>
