--- a/src/main/resources/templates/orderPages/orderList.html
+++ b/src/main/resources/templates/orderPages/orderList.html
@@ -6,35 +6,166 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.bundle.js"></script>
+    <style>
+        /*화면 안뜨게 */
+        .modal-dialog{
+            display: none;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+        /*.modal-content {*/
+        /*text-align:center;*/
+        /*width:100%;*/
+        /*max-width:400px;*/
+        /*border-radius:10px;*/
+        /*overflow:hidden;*/
+        /*background-color:#264db5;*/
+        /*box-shadow: 5px 10px 10px 1px rgba(0,0,0,.3);*/
+        /*}*/
+
+        /*.modal-body {*/
+        /*    position:fixed;*/
+        /*    top:0;*/
+        /*    left:0;*/
+        /*    width:100%;*/
+        /*    height:100%;*/
+        /*    background:rgba(0, 0, 0, 0.5);*/
+        /*    z-index:-1;*/
+        /*    word-break:break-word;*/
+        /*}*/
+
+    </style>
 </head>
 <body>
+<!--주문내역-->
 <th:block th:replace="commonPages/header :: header"></th:block>
-<th:block th:fragment="commonPages(modal)">
 <div th:if="${orderList == 'empty'}">
     <p>주문내역이 없습니다.</p>
 </div>
 <div th:unless="${orderList == 'empty'}">
-    <table class="table">
+    <table class="table" id="table-form">
         <tr>
             <th>주문번호</th>
             <th>상품이름</th>
             <th>배송상태</th>
             <th>후기작성</th>
-
         </tr>
         <tr th:each="order: ${orderList}">
             <td th:text="${order.id}"></td>
             <td th:text="${order.orderName}"></td>
             <td th:text="${order.orderStatus}"></td>
             <div th:if="${order.orderStatus == '배송완료'}">
-             <td><button class="btn btn-primary" data-toggle="modal" data-target="#modalComment">후기 작성</button></td>
+            <td>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#modalComment" id="modalOpen"> 후기 작성 </button>
+            </td>
             </div>
-        </tr>
-    </table>
-</div>
-<script>
 
-</script>
-</th:block>
+
+<!--모달 영역-->
+    <div class="modal modal-comment position-static d-block py-5" tabindex="-1" role="dialog" id="modalComment">
+        <div class="modal-dialog" role="document" id="modal-dialog">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header p-5 pb-4 border-bottom-0">
+                    <h1 class="fw-bold " id="commentSave">후기 작성</h1>
+                    <button type="button" class="btn-close close-area" data-bs-dismiss="modal" aria-label="Close" id="close">
+                    </button>
+                    <div class="modal-body p-5 pt-0">
+                        <input type="text" class="form-control rounded-3" id="commentWriter"
+                               name="commentWriter" th:value="${session.member.userId}" readonly>
+                        <label for="commentWriter">작성자</label>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control rounded-3 mt-3" id="commentContents"
+                                   name="commentContents" placeholder="내용">
+                            <label for="commentContents">내용</label>
+                        </div>
+                        <div class="star-container">
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                        </div>
+                        <h1 class="rating" id="starCount" name="starCount">0</h1>
+                        <script th:src="app.js"></script>
+                        <!--                    <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">작성완료</button>-->
+                        <button id="comment-write-btn" class="btn btn-secondary" th:onclick="commentWrite([[${order}]])">작성완료
+                        </button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</tr>
+</table>
 </body>
+<script th:inline="javascript">
+
+    // const commentOrder = (order) => {
+    //     console.log(order)
+    //     console.log(order.id)
+    //   const id = order.id
+    //     document.getElementById("orderId").value = id;
+    //     document.getElementById("orderId").innerHTML = id;
+    //     console.log(id)
+
+        // 모달버튼
+        $('#modalOpen').on('click', function(){
+            $('#modalComment').modal('show');
+        });
+        document.getElementById("modalOpen").onclick = function() {
+            document.getElementById("modal-dialog").style.display="block";
+        }
+        document.getElementById("close").onclick = function() {
+            document.getElementById("modal-dialog").style.display="none";
+        }
+
+    // 별점
+    let stars = document.querySelectorAll(".star");
+    document.querySelector(".star-container").addEventListener("click", starRating);
+    let rating = document.querySelector(".rating");
+
+    function starRating(e) {
+        stars.forEach((star) => star.classList.remove("star__checked"));
+        const i = [...stars].indexOf(e.target);
+        if (i > -1) {
+            stars[i].classList.add("star__checked");
+            rating.textContent = `${stars.length - i}`;
+        } else {
+            rating.textContent = `${0}`;
+        }
+    }
+
+    // 후기 쓰기
+    const commentWrite = (order) => {
+        const writer = document.getElementById("commentWriter").value;
+        const contents = document.getElementById("commentContents").value;
+        const starCount = document.getElementById("starCount").textContent;
+        const id = order.id;
+
+        console.log(id);
+        console.log(starCount);
+        $.ajax({
+            type: "get",
+            url: "/comment/save2",
+            data: {
+                commentWriter: writer,
+                commentContents: contents,
+                orderId: id,
+                starCount: starCount
+            },
+            dataType: "text",
+            success: function (res) {
+                console.log("성공");
+            },
+            error: function (err) {
+                console.log("실패");
+            }
+        });
+    }
+</script>
 </html>
