상품 수정 수정중

--- a/src/main/resources/templates/orderPages/orderList.html
+++ b/src/main/resources/templates/orderPages/orderList.html
@@ -126,7 +126,7 @@
         const i = [...stars].indexOf(e.target);
         if (i > -1) {
             stars[i].classList.add("star__checked");
-            rating.textContent = `${stars.length - i - 15}`;
+            rating.textContent = `${stars.length - i}`;
         } else {
             rating.textContent = `${0}`;
         }
