--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -18,7 +18,9 @@
 </head>
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
+<div th:if="${session.member.userId == 'admin'}">
 <a href="/item/save" class="btn-success">상품등록</a>
+</div>
 
 
 <div class="btn">
@@ -41,6 +43,7 @@
     </ul>
 </div>
 
+<!--상품-->
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
         <div th:each="item: ${itemList}">
@@ -62,6 +65,9 @@
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
                                     <p class="read"> <a th:href="@{/item/(itemId=${item.id})}" th:text="${item.itemName}"></a></p>
+                                    <div th:if="${session.member.userId == 'admin'}">
+                                    <button class="btn btn-warning" th:onclick="updateReq([[${item}]])">상품 수정</button>
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -70,14 +76,6 @@
             </div>
         </div>
     </table>
-
-
-
-
-
-
-
-
 
 
 <div class="container">
@@ -128,4 +126,13 @@
     </div>
 </div>
 </body>
+
+<script th:inline="javascript">
+    //상품 수정
+    const updateReq = (update) => {
+        console.log(update);
+        const id = update.id;
+        location.href="/item/update/"+id;
+    }
+</script>
 </html>
