후기작성 수정

--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
     <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <div id="wrap">
         <!--s:header-->
         <div id="header_bg"> <!--#1366bf-->
@@ -50,7 +53,7 @@
                 </ul>
 
                 <div id="h_btm" style="width: 950px"> <!--로고부분헤더-->
-                    <h1><a href="/"><img th:src="@{/img/gardening.jpg}" width="150" height="130" alt="도그쿡"></a></h1>
+                    <h1><a href="/"><img th:src="@{/img/gardening.jpg}" width="150" height="100" alt="도그쿡"></a></h1>
                     <nav>
                         <div id="all_menu">
                             <a href="#"><img th:src="@{/img/allmenu_icon.png}" alt="menu"></a>
