--- a/src/main/resources/templates/orderPages/orderList2.html
+++ b/src/main/resources/templates/orderPages/orderList2.html
@@ -118,6 +118,10 @@
                 console.log("성공");
                 document.querySelector('input[name=commentContents]').value = "";
                 document.querySelector('h1[name=starCount]').textContent = "0점";
+                stars.forEach((star) => star.classList.remove("star__checked"));
+
+
+
             },
             error: function (err) {
                 console.log("실패");
