--- a/src/main/resources/templates/itemPages/itemUpdate.html
+++ b/src/main/resources/templates/itemPages/itemUpdate.html
@@ -14,6 +14,7 @@
     <input type="text" name="itemName" th:value="${item.itemName}" placeholder="상품명" class="form-control">
     <input type="text" name="itemPrice" th:value="${item.itemPrice}" placeholder="상품가격" class="form-control">
     <textarea name="itemContents" cols="30" rows="10" th:field="${item.itemContents}" placeholder="상품 설명" class="form-control"></textarea>
+    <input type="hidden" th:value="${item.getStoredFileNameItem()}" name="storedFileNameItem">
     <input type="file" name="itemFileUpdate" th:value="${item.storedFileNameItem}" class="form-control" multiple>
     <select name="itemCategory" th:field="${item.itemCategory}" class="form-select" style="font-size: 12px; width: 200px; height: 35px">
       <option value="small" selected>소형 식물</option>
